@@ -1,3 +1,8 @@
+* Wed Feb 26 2020 Trevor Vaughan <tvaughan@onyxpoint.com> - 3.1.0-0
+- Ensure that the Hiera backend recurses as little as possible to improve
+  performance.
+- Remove all support for v1 data since it was experimental and removed in 3.0.0
+
 * Wed Dec 11 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 3.1.0-0
 - Add EL8 support
 
